testing the page responsive

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
           <p>Aureolin Research, Consultancy & Expertise Development Foundation</p>
           <p>House 463, Flat 5A & 6A, Road 7, Avenue 5</p>
           <p>Mirpur DOHS, Dhaka 1216, Bangladesh</p>
-          <p><a href="/cdn-cgi/l/email-protection#2e474048416e4f5c4d4b4a0048415b404a4f5a474140"><span class="__cf_email__" data-cfemail="2e474048416e4f5c4d4b4a0048415b404a4f5a474140">[email protected]</span></a></p>
+          <p>info@arced.foundation</p>
           <div class="d-flex justify-content-center gap-4 py-2">
             <a
               style="color: #facb1e; font-size: 25px"
