--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@
                   <i class="fas fa-database" style="font-size: 46px"></i>
                   <p>Database</p>
                 </div>
-                <div class="social-icon text-center">
+              <!---  <div class="social-icon text-center">
                   <i class="fas fa-chart-bar" style="font-size: 46px"></i>
                   <p>Stata</p>
-                </div>
+                </div> --->
                 <div class="social-icon text-center">
                   <i class="fab fa-python" style="font-size: 46px"></i>
                   <p>Python</p>
