--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 ARCED conducts both quantitative and qualitative research,
                 including real-time data collection and socio-economic assessments.
                 It employs methodologies like RCTs, DiD, and statistical modeling
-                using tools such as SPSS and STATA. The foundation has a team of
+                using tools such as SPSS and Stata. The foundation has a team of
                 in-house and external experts to ensure high-quality research and
                 analysis.
               </p>
@@ -365,4 +365,4 @@
     <!-- JavaScript Files -->
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
     <script src="./js/script.js"></script>
-    html>
+    <html>
